# mcp-warden

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SYSTEM_CONTEXT_DIAGRAM.md  action.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-test.yml  deps-locked.yml  docs.yml  examples.yml  integrity-gate.yml  release.yml  sigstore-fixture.yml
docs/: AGENT_TRUST_KERNEL.md  CHECKS.md  CONTENT_ENVELOPE.md  GUARD_PROXY.md  GUARD_PROXY_V3.md  POLICY_ENFORCEMENT.md  POLICY_MODEL.md  RESULT_INSPECTION.md  SIGNING.md  SPEC.md  THREAT_MODEL.md  THREAT_MODEL_V2.md  WARDEN_LOCK_SCHEMA.md
docs-site/: checklist.md  comparison.md  index.md  lock-format.md  pin-in-ci.md  quickstart.md  rug-pull.md  tool-poisoning.md
docs/plans/: 2026-07-18-agent-trust-kernel-design.md  2026-07-18-content-envelope-design.md  2026-07-19-pdp-pep-design.md
examples/github-actions/: matrix-multiple-servers.yml  pin-on-merge-check-on-pr.yml  private-repo-no-sarif.yml  sarif-upload.yml
examples/gitlab-ci/: .gitlab-ci.yml
examples/pre-commit/: .pre-commit-config.yaml
src/mcp_warden/: __init__.py  adapter_conformance.py  capture.py  check_core.py  checks.py  checks_secret.py  checks_supply.py  cli.py  cli_guard.py  cli_lock.py  cli_sign.py  content_envelope.py  content_models.py  decision_models.py  drift.py  emit_res.py  emitters.py  executable_bundle.py  framing.py  guard.py  guard_banner.py  guard_io.py  guard_lifecycle.py  guard_list_gate.py  guard_loop.py  guard_result.py  guard_strict.py  handler_identity.py  hashing.py  inspector.py  lockfile.py  models.py  net_rules.py  policy_decision.py  policy_enforcement.py  policy_eval.py  policy_model.py  precommit.py  provenance.py  redact.py  (+7 more)
tests/: test_action_yml.py  test_adapter_conformance.py  test_capture_http.py  test_checks.py  test_cli_version.py  test_content_envelope.py  test_drift.py  test_e2e_pin_check.py  test_emitters.py  test_framing.py  test_guard_banner.py  test_guard_platform.py  test_guard_posture.py  test_guard_proxy.py  test_guard_strict.py  test_guard_v3.py  test_guard_windows.py  test_hashing.py  test_inspect_parity.py  test_inspection_policy.py  test_lockfile.py  test_policy.py  test_policy_decision.py  test_policy_enforcement.py  test_precommit.py  test_provenance.py  test_res_dns.py  test_result_inspection.py  test_signing.py  test_signing_unit.py  test_spec_consistency.py  test_tokenizer.py  test_wire_block.py  test_workflow_pins.py
tests/fixtures/: clean_server.py  crash_server.py  fault_guard_launcher.py  listchange_server.py  mutated_server.py  overcap_server.py  poison_server.py
tests/fuzz/: conftest.py  test_fuzz_ansi.py  test_fuzz_content_envelope.py  test_fuzz_domain.py  test_fuzz_framing.py  test_fuzz_policy_decision.py  test_fuzz_redact.py
